Added jar, updated readme